# code-adapt

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
code_adapt/: __init__.py  errors.py  models.py  storage.py
code_adapt/cli/: main.py
code_adapt/services/: assessor.py  auth.py  classifier.py  gitee.py  github.py  gitlab.py  id_generator.py  provider.py
specs/001-adaptation-lifecycle-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-adaptation-lifecycle-cli/checklists/: requirements.md
specs/001-adaptation-lifecycle-cli/contracts/: cli-commands.md
src/: index.ts
src/commands/: analyze.ts  assess.ts  contribute.ts  implement.ts  init.ts  learn.ts  observe.ts  plan.ts  policy.ts  profile.ts  repo.ts  report.ts  status.ts  sync.ts  validate.ts
src/lib/: config.ts  errors.ts  utils.ts
src/models/: adaptation.ts  analysis.ts  learning.ts  observation.ts  plan.ts  policy.ts  profile.ts  repository.ts
src/services/: assessor.ts  auth.ts  classifier.ts  github.ts  id-generator.ts  output.ts  storage.ts
tests/: conftest.py  test_classifier.py  test_gitee_client.py  test_gitlab_client.py  test_models.py  test_multi_provider_cli.py  test_provider.py  test_storage.py  test_xinchuang.py
